--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ h2 {
 
 .page-enter {
     opacity: 0;
-	 transform: translateX(-100%);
+	 transform: translateY(-100%);
 }
 
 .page-enter-active {
